# dusk-abi

./: CHANGELOG.md  Cargo.toml  README.md
dusk-abi/: Cargo.toml
dusk-abi-types/: Cargo.toml
dusk-abi-types/src/: lib.rs  query.rs  return_value.rs  transaction.rs
dusk-abi/src/: hosted.rs  lib.rs  types.rs
src/: canon_to_vec.rs  host.rs  hosted.rs  lib.rs
src/types/: contract.rs  query.rs  return_value.rs  transaction.rs
