[package]
name = "dusk-abi"
version = "0.9.0-rc.1"
authors = [
  "Kristoffer Ström <kristoffer@dusk.network>",
  "zer0 <matteo@dusk.network>",
  "Jules de Smit <jules@dusk.network>",
  "CPerezz <carlos@dusk.network>"
]
edition = "2018"

repository = "https://github.com/dusk-network/dusk-abi"
description = "The official ABI to develop dusk-network contracts and host module for Rusk VM"
license = "MPL-2.0"
exclude = [".github/workflows/ci.yml", ".gitignore"]

[dependencies]
cfg-if = "0.1"
wee_alloc = "0.4"

canonical = "0.6"
canonical_derive = "0.6"

[dev-dependencies]
arbitrary = "0.3"
